--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
     
 </head>
 <body>
-    <div class="wrapper">
+    <div class="bug">
         <div class="toDo">
             <div class="plus"></div>
         </div>
-        <div class="task">
-            <div class="taskName">
-                asd
-            </div>
-            <div class="taskText">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus sed suscipit nesciunt perspiciatis ullam reprehenderit et adipisci eum nemo officiis omnis qui, aut illum, impedit voluptates voluptate nulla incidunt reiciendis, deserunt atque eius ab est! Eius reprehenderit mollitia magni autem eligendi quaerat tempora nobis ducimus ipsum rem corporis sit quasi quisquam soluta, laborum aliquam voluptatibus maxime quo, quidem ipsa deserunt culpa. Laboriosam illum sequi omnis odit rerum cumque, reiciendis vitae hic nemo eius, tenetur consectetur. Beatae recusandae vero perspiciatis commodi, sed molestiae quis! Maxime necessitatibus inventore corporis culpa, similique velit aliquam quo, voluptates quis distinctio aliquid blanditiis consectetur sed placeat.
-            </div>
-            <div class="toolbar">
-                <div class="delete">
-                    удалить
+        <div class="wrapper">
+            <div class="task" id="del0">
+                <div class="taskName">
+                    asd
                 </div>
-                <div class="date">
-                    дата
+                <div class="taskText">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus sed suscipit nesciunt perspiciatis ullam reprehenderit et adipisci eum nemo officiis omnis qui, aut illum, impedit voluptates voluptate nulla incidunt reiciendis, deserunt atque eius ab est! Eius reprehenderit mollitia magni autem eligendi quaerat tempora nobis ducimus ipsum rem corporis sit quasi quisquam soluta, laborum aliquam voluptatibus maxime quo, quidem ipsa deserunt culpa. Laboriosam illum sequi omnis odit rerum cumque, reiciendis vitae hic nemo eius, tenetur consectetur. Beatae recusandae vero perspiciatis commodi, sed molestiae quis! Maxime necessitatibus inventore corporis culpa, similique velit aliquam quo, voluptates quis distinctio aliquid blanditiis consectetur sed placeat.
+                </div>
+                <div class="toolbar">
+                    <div class="del" id="0">
+                        
+                    </div>
+                    <div class="date">
+                        дата
+                    </div>
                 </div>
             </div>
         </div>
